# plm_choice

./: .gitignore  README.md  pyproject.toml  run_experiments.py
docs/: EMBEDDING_DISTANCE_COMPUTATION.md  SPECIFICATION.md  todo.md
docs/ismb_poster/: thumbnail.ai
docs/log/: 20250719_data_merging.txt
models/runs/20241227_014707/: test_metrics.txt
notebooks/: test_gpu.ipynb
scripts/: DATA_SYNC_README.md  compare_mmseqs_runs.py  compare_runs.py  compute_embedding_distances.py  create_pairwise_embedding_visualizations.py  create_subset_datasets.py  create_summary_grid_plots.py  evaluate_multiple_runs.py  explor_subnset_distribution.py  extract_plddt_from_colabfold.py  rank_plms_by_performance.py  reduce_embeddings_pca.py  sync_data.sh  visualize_summary_results.py  vizualisation_log_scale.py
scripts/2024_new_proteins/: delete_member_table.py  extract_uniref.sh  extract_uniref_clusters.py  extract_uniref_entry_ids.py  extract_uniref_to_sqlite.py  get_uniref50.sh  identify_novel_dissimilar_proteins.py
scripts/create_embeddings/: generate_all_embeddings.sh  unified_embedder.py
scripts/viz/: summarize_results.py
src/: README.md  train.py
src/data_preparation/: README.md  distance_computation.py  merge_datasets.py  merge_mmseqs_foldseek_datasets.py  run_foldseek_all_vs_all.sh  run_mmseqs_all_vs_all.sh  split_dataset.py
src/data_preparation/2024_new_proteins/: delete_member_table.py  identify_novel_dissimilar_proteins.py
src/data_preparation/embeddings/: batch_embedding_generation.sh  random_embeddings.py
src/evaluation/: batch_inferer.py  evaluate.py  evaluate_multiple.py  infer_pairs.py  metrics.py
src/shared/: datasets.py  experiment_manager.py
src/training/: README_run_experiments.md  run_experiments.py  train.py
src/unknown_unknowns/: evaluate.py  train.py
src/unknown_unknowns/configs/: config.py
src/unknown_unknowns/data/: datasets.py  preprocessing.py
src/unknown_unknowns/data_preparation/: get_best_pdbs.py  run_foldseek_all_vs_all.sh  run_mmseqs_all_vs_all.sh
src/unknown_unknowns/evaluation/: metrics.py
src/unknown_unknowns/models/: predictor.py
src/visualization/: README_pairwise_comparison.md  create_embedding_comparison_plots.py  create_performance_summary_plots.py  legacy_summarize.py  merge_plots.ipynb  pairwise_embedding_comparison.py  plot_ecdf.py
tests/: test_plot.py
tests/2024_new_proteins/: create_test_sample.py  test_extract_uniref_to_sqlite.py
tests/create_embeddings/: dummy_proteins.fasta  test_unified_embedder.py
(+10 files in other folders)
