[project]
name = "unknown-unknowns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "esm>=3.2.0",
    "h5py>=3.12.1",
    "ijson>=3.4.0",
    "lightning>=2.5.0.post0",
    "lxml>=5.4.0",
    "matplotlib>=3.9.4",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pyfaidx>=0.8.1.4",
    "scikit-learn>=1.6.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "tensorboard>=2.18.0",
    "tensorboardx>=2.6.2.2",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupytext>=1.17.1",
    "py-spy>=0.4.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
