[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plm_choice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "esm>=3.2.0",
    "h5py>=3.12.1",
    "ijson>=3.4.0",
    "lightning>=2.5.0.post0",
    "lxml>=5.4.0",
    "matplotlib>=3.9.4",
    "matplotlib-venn>=1.1.2",
    "pandas>=2.2.3",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pyfaidx>=0.8.1.4",
    "scikit-learn>=1.6.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupytext>=1.17.1",
    "py-spy>=0.4.0",
    "pytest>=8.0.0",
    "python-docx>=1.1.2",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
